--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geo Redirect</title>
+    <title>GIVEAWAY RANDOM</title>
     <script>
         fetch("https://ipapi.co/json/")
         .then(response => response.json())
