--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </script>
 </head>
 <body>
-    <h1>PREPARING FOR YOU...</h1>
+    <h1>PREPARING A GIFT FOR YOU PLEASE WAIT....</h1>
 </body>
 </html>
