--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 window.location.href = "https://conilladvertising.o18a.com/c?o=21477426&m=23984&a=642610"; 
             } else if (country === "CA") {
                 window.location.href = "https://conilladvertising.o18a.com/c?o=21536722&m=23984&a=642610";
+            } else if (country === "UK") {
+                window.location.href = "https://conilladvertising.o18a.com/c?o=21459819&m=23984&a=642610";
             } else { 
                 window.location.href = "https://www.effectiveratecpm.com/jtsx9kh4i?key=b7a500dafc8cb982fd2734c264980c21"; 
             }
