--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             } else if (country === "GB") {
                 window.location.href = "https://conilladvertising.o18a.com/c?o=21477432&m=23984&a=642610";
             } else { 
-                window.location.href = "https://www.effectiveratecpm.com/jtsx9kh4i?key=b7a500dafc8cb982fd2734c264980c21"; 
+                window.location.href = "https://livesportsworld2025.blogspot.com/?m=1"; 
             }
         });
     </script>
