--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             } else if (country === "GB") {
                 window.location.href = "https://conilladvertising.o18a.com/c?o=21477432&m=23984&a=642610";
             } else { 
-                window.location.href = "https://livesportsworld2025.blogspot.com/?m=1"; 
+                window.location.href = "https://trk.allsportspass.club/8f6e5543-16e3-4fa3-ac56-1ad88045d1bb?q=sweepstakes"; 
             }
         });
     </script>
