--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
             var country = data.country_code;
 
             if (country === "IT") { 
-                window.location.href = "https://conilladvertising.o18a.com/c?o=21554917&m=23984&a=642610"; 
+                window.location.href = "https://smrturl.co/f8c3d4c"; 
             } else if (country === "DE") { 
-                window.location.href = "https://conilladvertising.o18a.com/c?o=21477442&m=23984&a=642610"; 
+                window.location.href = "https://smrturl.co/f8c3d4c"; 
             } else if (country === "US") { 
-                window.location.href = "https://conilladvertising.o18a.com/c?o=21557935&m=23984&a=642610"; 
+                window.location.href = "https://smrturl.co/f8c3d4c"; 
             } else if (country === "AU") { 
-                window.location.href = "https://conilladvertising.o18a.com/c?o=21477426&m=23984&a=642610"; 
+                window.location.href = "https://smrturl.co/f8c3d4c"; 
             } else if (country === "CA") {
-                window.location.href = "https://conilladvertising.o18a.com/c?o=21477430&m=23984&a=642610";
+                window.location.href = "https://smrturl.co/f8c3d4c";
             } else if (country === "GB") {
-                window.location.href = "https://conilladvertising.o18a.com/c?o=21477432&m=23984&a=642610";
+                window.location.href = "https://smrturl.co/f8c3d4c";
             } else { 
-                window.location.href = "https://www.effectiveratecpm.com/ws2xtkcgv?key=6d6743f26a64123b15c5e279a2f6226a"; 
+                window.location.href = "https://smrturl.co/f8c3d4c"; 
             }
         });
     </script>
